--- a/templates/member/mypage-applied.html
+++ b/templates/member/mypage-applied.html
@@ -288,43 +288,7 @@
                     <ul class="applied-list0 writing-list hidden">
                         <h1>
                             <div>고민중 총 1건</div>
-                            <div>
-                                <div class="applied-list0-filter">
-                                    <button aria-expanded="false"
-                                        aria-haspopup="true"
-                                        class="btn-text"
-                                        type="button"><span>열람여부
-                                            필터링</span><svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="16" height="16"
-                                            fill="none"
-                                            viewBox="0 0 16 16"
-                                            aria-hidden="true"
-                                            class="arrow grey">
-                                            <path fill="#222"
-                                                fill-rule="evenodd"
-                                                d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
-                                                clip-rule="evenodd">
-                                            </path>
-                                        </svg></button>
-                                </div>
-                                <p class="applied-list0-filter-on">
-                                    전체</p><select
-                                    name="applied_filter"
-                                    class="applied-filter-status">
-                                    <option id="APPLIED"
-                                        value="APPLIED">전체
-                                    </option>
-                                    <option id="READ" value="READ">열람
-                                    </option>
-                                    <option id="UNREAD"
-                                        value="UNREAD">미열람
-                                    </option>
-                                    <option id="CANCELED"
-                                        value="CANCELED">
-                                        지원취소</option>
-                                </select>
-                            </div>
+
                         </h1>
                         <li class="contentlist">
                             <div class="applied_item">
@@ -382,97 +346,9 @@
                                                 clip-rule="evenodd">
                                             </path>
                                         </svg></button>
-                                </div>
-                                <p class="applied-list0-filter-on">
-                                    전체</p><select
-                                    name="applied_filter"
-                                    class="applied-filter-status">
-                                    <option id="APPLIED"
-                                        value="APPLIED">전체
-                                    </option>
-                                    <option id="READ" value="READ">열람
-                                    </option>
-                                    <option id="UNREAD"
-                                        value="UNREAD">미열람
-                                    </option>
-                                    <option id="CANCELED"
-                                        value="CANCELED">
-                                        지원취소</option>
-                                </select>
-                            </div>
-                        </h1>
-                        <div class="applied-list-blank">
-                            지원정보가 없습니다</div>
-                    </ul>
-                    <ul class="applied-list0 passed-list hidden">
-                        <h1>
-                            <div>서류통과 총 0건</div>
-                            <div>
-                                <div class="applied-list0-filter">
-                                    <button aria-expanded="false"
-                                        aria-haspopup="true"
-                                        class="btn-text"
-                                        type="button"><span>열람여부
-                                            필터링</span><svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="16" height="16"
-                                            fill="none"
-                                            viewBox="0 0 16 16"
-                                            aria-hidden="true"
-                                            class="arrow grey">
-                                            <path fill="#222"
-                                                fill-rule="evenodd"
-                                                d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
-                                                clip-rule="evenodd">
-                                            </path>
-                                        </svg></button>
-                                </div>
-                                <p class="applied-list0-filter-on">
-                                    전체</p><select
-                                    name="applied_filter"
-                                    class="applied-filter-status">
-                                    <option id="APPLIED"
-                                        value="APPLIED">전체
-                                    </option>
-                                    <option id="READ" value="READ">열람
-                                    </option>
-                                    <option id="UNREAD"
-                                        value="UNREAD">미열람
-                                    </option>
-                                    <option id="CANCELED"
-                                        value="CANCELED">
-                                        지원취소</option>
-                                </select>
-                            </div>
-                        </h1>
-                        <div class="applied-list-blank">
-                            지원정보가 없습니다</div>
-                    </ul>
-                    <ul class="applied-list0 hired-list hidden">
-                        <h1>
-                            <div>최종합격 총 0건</div>
-                            <div>
-                                <div class="applied-list0-filter">
-                                    <button aria-expanded="false"
-                                        aria-haspopup="true"
-                                        class="btn-text"
-                                        type="button"><span>열람여부
-                                            필터링</span><svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="16" height="16"
-                                            fill="none"
-                                            viewBox="0 0 16 16"
-                                            aria-hidden="true"
-                                            class="arrow grey">
-                                            <path fill="#222"
-                                                fill-rule="evenodd"
-                                                d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
-                                                clip-rule="evenodd">
-                                            </path>
-                                        </svg></button>
-                                    <div class="sc-f9de9741-1 vakYz">
+                                    <div class="filter-list hidden">
                                         <div
-                                            class="sc-f9de9741-2 cszBRp">
+                                            class="filter-inner">
                                             <div
                                                 class="close_button_wrap">
                                                 <button><svg
@@ -498,21 +374,21 @@
                                         <div class="layer_contents">
                                             <div>
                                                 <ul aria-label="포지션 정렬 기준"
-                                                    class="sc-a37e1fc5-0 iyjlgU">
+                                                    class="filter-ul">
                                                     <li><button
-                                                            class="sc-a37e1fc5-1 ksPtfT peer"
+                                                            class="filter-button peer"
                                                             type="button">전체</button>
                                                     </li>
                                                     <li><button
-                                                            class="sc-a37e1fc5-1 ksPtfT peer"
+                                                            class="filter-button peer"
                                                             type="button">열람</button>
                                                     </li>
                                                     <li><button
-                                                            class="sc-a37e1fc5-1 ksPtfT peer"
+                                                            class="filter-button peer"
                                                             type="button">미열람</button>
                                                     </li>
                                                     <li><button
-                                                            class="sc-a37e1fc5-1 ksPtfT peer"
+                                                            class="filter-button peer"
                                                             type="button">지원취소</button>
                                                     </li>
                                                 </ul>
@@ -520,12 +396,12 @@
                                         </div>
                                     </div>
                                     <div role="presentation"
-                                        class="sc-f9de9741-3 eWfidV">
+                                        class="filter-background hidden">
                                     </div>
                                 </div>
-                                <p class="applied-list0-filter-on">
-                                    전체</p><select
-                                    name="applied_filter"
+                                <p class="applied-list0-filter-on">전체
+                                </p>
+                                <select name="applied_filter"
                                     class="applied-filter-status">
                                     <option id="APPLIED"
                                         value="APPLIED">전체
@@ -544,46 +420,26 @@
                         <div class="applied-list-blank">
                             지원정보가 없습니다</div>
                     </ul>
+                    <ul class="applied-list0 passed-list hidden">
+                        <h1>
+                            <div>서류통과 총 0건</div>
+
+                        </h1>
+                        <div class="applied-list-blank">
+                            지원정보가 없습니다</div>
+                    </ul>
+                    <ul class="applied-list0 hired-list hidden">
+                        <h1>
+                            <div>최종합격 총 0건</div>
+
+                        </h1>
+                        <div class="applied-list-blank">
+                            지원정보가 없습니다</div>
+                    </ul>
                     <ul class="applied-list0 rejected-list hidden">
                         <h1>
                             <div>불합격 총 0건</div>
-                            <div>
-                                <div class="applied-list0-filter">
-                                    <button aria-expanded="false"
-                                        aria-haspopup="true"
-                                        class="btn-text"
-                                        type="button"><span>열람여부
-                                            필터링</span><svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="16" height="16"
-                                            fill="none"
-                                            viewBox="0 0 16 16"
-                                            aria-hidden="true"
-                                            class="arrow grey">
-                                            <path fill="#222"
-                                                fill-rule="evenodd"
-                                                d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
-                                                clip-rule="evenodd">
-                                            </path>
-                                        </svg></button>
-                                </div>
-                                <p class="applied-list0-filter-on">
-                                    전체</p><select
-                                    name="applied_filter"
-                                    class="applied-filter-status">
-                                    <option id="APPLIED"
-                                        value="APPLIED">전체
-                                    </option>
-                                    <option id="READ" value="READ">열람
-                                    </option>
-                                    <option id="UNREAD"
-                                        value="UNREAD">미열람
-                                    </option>
-                                    <option id="CANCELED"
-                                        value="CANCELED">
-                                        지원취소</option>
-                                </select>
-                            </div>
+
                         </h1>
                         <div class="applied-list-blank">
                             지원정보가 없습니다</div>
