--- a/static/css/member/mypage-applied1.css
+++ b/static/css/member/mypage-applied1.css
@@ -517,6 +517,69 @@
     display: none;
 }
 
+.filter-list {
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 8px 16px;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 44px;
+    border: 1px solid rgb(228, 228, 228);
+    border-radius: 12px;
+    z-index: 5;
+    width: 120px;
+    right: 9px;
+    left: unset;
+}
+
+.filter-inner {
+    display: none;
+}
+
+.filter-inner .close_button_wrap {
+    text-align: right;
+}
+
+.filter-inner .close_button_wrap button {
+    border: none;
+    margin: 20px 20px 0px;
+}
+
+.applied-list0 > h1 > div:nth-child(2) button {
+    display: flex;
+    align-items: center;
+    margin-right: 0px;
+}
+
+.filter-inner h1 {
+    font-size: 28px;
+    line-height: 38px;
+    color: rgb(0, 0, 0);
+    margin: 20px 0px 0px 16px;
+}
+
+.filter-list .layer_contents {
+    max-height: calc(100% - 56px);
+    padding: 0px;
+}
+.filter-ul {
+    width: 100%;
+}
+
+.filter-button {
+    width: 100%;
+    height: 40px;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(38, 38, 38);
+    text-align: left;
+    padding-left: 24px;
+}
+
+.filter-background {
+    position: fixed;
+    inset: 0px;
+    z-index: 3;
+}
+/*  */
 .applied-filter-status {
     position: relative;
     z-index: 2;
