--- a/templates/member/mypage-applied.html
+++ b/templates/member/mypage-applied.html
@@ -332,7 +332,8 @@
                                     <button aria-expanded="false"
                                         aria-haspopup="true"
                                         class="btn-text"
-                                        type="button"><span>열람여부
+                                        type="button">
+                                        <span>열람여부
                                             필터링</span><svg
                                             xmlns="http://www.w3.org/2000/svg"
                                             width="16" height="16"
@@ -347,8 +348,7 @@
                                             </path>
                                         </svg></button>
                                     <div class="filter-list hidden">
-                                        <div
-                                            class="filter-inner">
+                                        <div class="filter-inner">
                                             <div
                                                 class="close_button_wrap">
                                                 <button><svg
