--- a/templates/member/mypage-scraplist.html
+++ b/templates/member/mypage-scraplist.html
@@ -16,13 +16,6 @@
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-facebook.svg">
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-google.svg">
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-apple.svg">
-    <link rel="stylesheet" href="/_next/static/css/cad931bac97f5ecb.css" data-precedence="next">
-    <link rel="preload" as="script" fetchpriority="low" href="/_next/static/chunks/webpack-e00980e9ec739c33.js">
-    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <link rel="preload" href="https://dynamic.criteo.com/js/ld/ld.js?a=116898" as="script">
-    <link rel="preload" href="https://www.googletagmanager.com/gtag/js?id=G-HLK7K0XF15" as="script">
-    <link rel="preload" href="https://t1.daumcdn.net/kas/static/kp.js" as="script">
-    <link rel="preload" href="https://cdn.megadata.co.kr/dist/prod/v2/mtm.js?adverId=jumpit&amp;device=B" as="script">
     <title>템프 | 템프 스크랩</title>
     <meta name="description" content="개발자 맞춤 이력서와 채용 공고, 취업·이직 꿀팁 콘텐츠 확인하고 점핏으로 FIT하게 취업하자!">
     <meta name="keywords" content="개발자 채용,이력서,이력서양식,스타트업 채용,대기업 채용,취업,구인,구직,면접제안,기업정보,커리어,커리어개발,기업정보,채용정보">
@@ -660,7 +653,7 @@
         </div>
     </main>
     <div id="modal"></div>
-    <script src="/_next/static/chunks/webpack-e00980e9ec739c33.js" async=""></script>
+    <!-- <script src="/_next/static/chunks/webpack-e00980e9ec739c33.js" async=""></script>
     <script>(self.__next_f = self.__next_f || []).push([0]); self.__next_f.push([2, null])</script>
     <script>self.__next_f.push([1, "1:HL[\"/_next/static/media/ff840cfebfb63b0c-s.p.woff2\",\"font\",{\"crossOrigin\":\"\",\"type\":\"font/woff2\"}]\n2:HL[\"/_next/static/css/cad931bac97f5ecb.css\",\"style\"]\n0:\"$L3\"\n"])</script>
     <script>self.__next_f.push([1, "4:I[33728,[],\"\"]\n6:I[1827,[\"6394\",\"static/chunks/6394-782c5889429c5852.js\",\"6340\",\"static/chunks/6340-869fcd011d2d7429.js\",\"6470\",\"static/chunks/app/global-error-65ec73dd6b0ddd7c.js\"],\"\"]\n7:I[24210,[\"6394\",\"static/chunks/6394-782c5889429c5852.js\",\"5526\",\"static/chunks/5526-48949280dbc9d3fa.js\",\"8285\",\"static/chunks/8285-67151ff55d513e44.js\",\"9222\",\"static/chunks/9222-0b87edff29c22664.js\",\"3198\",\"static/chunks/3198-d5e30da27a8b69a1.js\",\"9903\",\"static/chunks/9903-e4aec8f8082baf1a.js\",\"9536\",\"static/chunks/953"])</script>
@@ -728,7 +721,7 @@
     <script src="https://t1.daumcdn.net/kas/static/kp.js" id="kakao-pixel" data-nscript="afterInteractive"></script>
     <script src="https://cdn.megadata.co.kr/dist/prod/v2/mtm.js?adverId=jumpit&amp;device=B" id="mobon"
         data-nscript="afterInteractive"></script>
-    <next-route-announcer style="position: absolute;"></next-route-announcer>
+    <next-route-announcer style="position: absolute;"></next-route-announcer> -->
 </body>
 <script src="/static/js/member/mypage-all.js"></script>
 
