--- a/templates/main/positionSort.html
+++ b/templates/main/positionSort.html
@@ -201,7 +201,7 @@
                                 aria-pressed="true"
                                 type="button"
                                 value="jobCategory"
-                                class="categoryButton categoryAllSelect"
+                                class="categoryButton selectAllButton"
                             >
                                 <span>전체</span>
                             </button>
