--- a/templates/member/mypage-accountwithdrawl.html
+++ b/templates/member/mypage-accountwithdrawl.html
@@ -16,7 +16,7 @@
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-facebook.svg">
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-google.svg">
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-apple.svg">
-    <link rel="stylesheet" href="/_next/static/css/cad931bac97f5ecb.css" data-precedence="next">
+    <!-- <link rel="stylesheet" href="/_next/static/css/cad931bac97f5ecb.css" data-precedence="next">
     <link rel="preload" as="script" fetchpriority="low" href="/_next/static/chunks/webpack-e00980e9ec739c33.js">
     <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
     <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-K2J5HLX"></script>
@@ -50,7 +50,7 @@
     <link rel="preload" href="https://dynamic.criteo.com/js/ld/ld.js?a=116898" as="script">
     <link rel="preload" href="https://www.googletagmanager.com/gtag/js?id=G-HLK7K0XF15" as="script">
     <link rel="preload" href="https://t1.daumcdn.net/kas/static/kp.js" as="script">
-    <link rel="preload" href="https://cdn.megadata.co.kr/dist/prod/v2/mtm.js?adverId=jumpit&amp;device=B" as="script">
+    <link rel="preload" href="https://cdn.megadata.co.kr/dist/prod/v2/mtm.js?adverId=jumpit&amp;device=B" as="script"> -->
     <title>템프 | 계정 탈퇴</title>
     <meta name="description" content="개발자 맞춤 이력서와 채용 공고, 취업·이직 꿀팁 콘텐츠 확인하고 점핏으로 FIT하게 취업하자!">
     <meta name="keywords" content="개발자 채용,이력서,이력서양식,스타트업 채용,대기업 채용,취업,구인,구직,면접제안,기업정보,커리어,커리어개발,기업정보,채용정보">
@@ -69,8 +69,6 @@
             font-family: Nanum;
             src: url("/publishing/static/member/fonts/NanumBarunGothic.ttf");
         }
-
-
 
         @font-face {
             font-family: Jumpit;
