--- a/templates/member/mypage-payment.html
+++ b/templates/member/mypage-payment.html
@@ -16,47 +16,8 @@
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-facebook.svg">
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-google.svg">
     <link rel="preload" as="image" href="//cdn.jumpit.co.kr/jumpit/personal/v-footer-sns-apple.svg">
-    <link rel="stylesheet" href="/_next/static/css/cad931bac97f5ecb.css" data-precedence="next">
-    <link rel="preload" as="script" fetchpriority="low" href="/_next/static/chunks/webpack-e00980e9ec739c33.js">
-    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-K2J5HLX"></script>
-    <script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script>
-    <script src="/_next/static/chunks/fd9d1056-1403efed8a5d9a56.js" async=""></script>
-    <script src="/_next/static/chunks/2472-cc8bce19171016d7.js" async=""></script>
-    <script src="/_next/static/chunks/main-app-85571a0f19fa6cc2.js" async=""></script>
-    <script src="/_next/static/chunks/6394-782c5889429c5852.js" async=""></script>
-    <script src="/_next/static/chunks/6340-869fcd011d2d7429.js" async=""></script>
-    <script src="/_next/static/chunks/app/global-error-65ec73dd6b0ddd7c.js" async=""></script>
-    <script src="/_next/static/chunks/5526-48949280dbc9d3fa.js" async=""></script>
-    <script src="/_next/static/chunks/8285-67151ff55d513e44.js" async=""></script>
-    <script src="/_next/static/chunks/9222-0b87edff29c22664.js" async=""></script>
-    <script src="/_next/static/chunks/3198-d5e30da27a8b69a1.js" async=""></script>
-    <script src="/_next/static/chunks/9903-e4aec8f8082baf1a.js" async=""></script>
-    <script src="/_next/static/chunks/9536-17c5180b41a54dae.js" async=""></script>
-    <script src="/_next/static/chunks/5812-2e7efb9d8229a50d.js" async=""></script>
-    <script src="/_next/static/chunks/app/layout-bae7e4122ffb501d.js" async=""></script>
-    <script src="/_next/static/chunks/1396-14d93c165c0c55b0.js" async=""></script>
-    <script src="/_next/static/chunks/1527-600699e62b81c450.js" async=""></script>
-    <script src="/_next/static/chunks/6548-127b7943b33fe3fd.js" async=""></script>
-    <script src="/_next/static/chunks/8528-c1d2ea7caa70441b.js" async=""></script>
-    <script src="/_next/static/chunks/6691-dfc5ace00217b43e.js" async=""></script>
-    <script src="/_next/static/chunks/630-f4c0982151fb6384.js" async=""></script>
-    <script src="/_next/static/chunks/5866-9975f1843c8655f6.js" async=""></script>
-    <script src="/_next/static/chunks/3164-5b5385fe3103e55c.js" async=""></script>
-    <script src="/_next/static/chunks/3807-d3ba823e15f6cab5.js" async=""></script>
-    <script src="/_next/static/chunks/app/page-03b0154981d5674e.js" async=""></script>
-    <script src="/_next/static/chunks/app/error-7b994f86a1197aef.js" async=""></script>
-    <script src="/_next/static/chunks/app/(main)/layout-546fee3e9e2585ae.js" async=""></script>
-    <link rel="preload" href="https://dynamic.criteo.com/js/ld/ld.js?a=116898" as="script">
-    <link rel="preload" href="https://www.googletagmanager.com/gtag/js?id=G-HLK7K0XF15" as="script">
-    <link rel="preload" href="https://t1.daumcdn.net/kas/static/kp.js" as="script">
-    <link rel="preload" href="https://cdn.megadata.co.kr/dist/prod/v2/mtm.js?adverId=jumpit&amp;device=B" as="script">
     <title>템프 | 결제 관리</title>
-    <meta name="description" content="개발자 맞춤 이력서와 채용 공고, 취업·이직 꿀팁 콘텐츠 확인하고 점핏으로 FIT하게 취업하자!">
-    <meta name="keywords" content="개발자 채용,이력서,이력서양식,스타트업 채용,대기업 채용,취업,구인,구직,면접제안,기업정보,커리어,커리어개발,기업정보,채용정보">
-    <meta name="naver-site-verification" content="b0e5d9e30ab4abe67694a4472741b130e5833906">
     <link rel="icon" href="/publishing/static/images/member/favicon.ico" />
-    <meta name="next-size-adjust">
     <script src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js" nomodule=""></script>
     <style data-styled="active" data-styled-version="6.0.7">
     </style>
@@ -288,6 +249,38 @@
                                                 clip-rule="evenodd">
                                             </path>
                                         </svg></button>
+                                    <div class="filter-list hidden">
+                                        <div class="filter-inner">
+                                            <div class="close_button_wrap">
+                                                <button><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                        viewBox="0 0 24 24">
+                                                        <g fill="none" fill-rule="evenodd">
+                                                            <path d="M0 0h24v24H0z">
+                                                            </path>
+                                                            <path stroke="#000" stroke-width="2"
+                                                                d="M20 4 4 20M4 4l16 16">
+                                                            </path>
+                                                        </g>
+                                                    </svg></button>
+                                            </div>
+                                            <h1>applied_filter</h1>
+                                        </div>
+                                        <div class="layer_contents">
+                                            <div>
+                                                <ul aria-label="포지션 정렬 기준" class="filter-ul">
+                                                    <li><button class="filter-button peer" type="button">전체</button>
+                                                    </li>
+                                                    <li><button class="filter-button peer" type="button">결제완료</button>
+                                                    </li>
+                                                    <li><button class="filter-button peer" type="button">결제대기</button>
+                                                    </li>
+
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div role="presentation" class="filter-background hidden">
+                                    </div>
                                 </div>
                                 <p class="applied-list0-filter-on">
                                     전체</p><select name="applied_filter" class="applied-filter-status">
@@ -295,7 +288,7 @@
                                     </option>
                                     <option id="READ" value="READ">결제완료
                                     </option>
-                                    <option id="UNREAD" value="UNREAD">결제미완료
+                                    <option id="UNREAD" value="UNREAD">결제대기
                                     </option>
                                 </select>
                             </div>
