--- a/static/css/member/mypage-payment1.css
+++ b/static/css/member/mypage-payment1.css
@@ -445,11 +445,15 @@
 .applied-list0 > h1 > div:nth-child(2){
     font-size: 18px;
     text-align: center;
-    width: 140px;    
+    width: 40px;    
+    position : absolute;
+    right : 140px
 }
 
+
+
 .applied-list0 > h1 > div:nth-child(3) {
-    flex-shrink: 0;
+   flex-shrink: 0;
 }
 
 .applied-list0-filter {
@@ -469,17 +473,26 @@
     align-items: center;
     margin-right: 0px;
 }
+.applied-list0-filter .btn-text:hover {
+    color: rgb(153, 153, 153);
+}
 
 .applied-list0-filter .btn-text span {
     font-size: 14px;
     line-height: 20px;
     color: rgb(102, 102, 102);
+    /* width : 100px; */
 }
 
 .applied-list0-filter .arrow {
     position: absolute;
     top: 11px;
     right: 12px;
+    transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
+}
+
+.applied-list0-filter .arrow-up {
+    transform: rotate(-180deg);
     transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
 }
 
@@ -506,6 +519,64 @@
 
 .applied-list0 > h1 > div:nth-child(3) > p {
     display: none;
+}
+
+.filter-list {
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 8px 16px;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 44px;
+    border: 1px solid rgb(228, 228, 228);
+    border-radius: 12px;
+    z-index: 5;
+    width: 120px;
+    right: 9px;
+    left: unset;
+}
+
+.filter-inner {
+    display: none;
+}
+
+.filter-inner .close_button_wrap {
+    text-align: right;
+}
+
+.filter-inner .close_button_wrap button {
+    border: none;
+    margin: 20px 20px 0px;
+}
+
+
+.filter-inner h1 {
+    font-size: 28px;
+    line-height: 38px;
+    color: rgb(0, 0, 0);
+    margin: 20px 0px 0px 16px;
+}
+
+.filter-list .layer_contents {
+    max-height: calc(100% - 56px);
+    padding: 0px;
+}
+.filter-ul {
+    width: 100%;
+}
+
+.filter-button {
+    width: 100%;
+    height: 40px;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(38, 38, 38);
+    text-align: left;
+    padding-left: 24px;
+}
+
+.filter-background {
+    position: fixed;
+    inset: 0px;
+    z-index: 3;
 }
 
 .applied-filter-status {
@@ -540,4 +611,8 @@
     font-weight: 400;
     font-size: 17px;
     color: rgb(102, 102, 102);
+}
+
+.hidden{
+    display: none;
 }
