--- a/templates/member/mypage-scraplist.html
+++ b/templates/member/mypage-scraplist.html
@@ -190,6 +190,82 @@
                     </div>
                 </div>
                 <div class="main-content2">
+                    <!-- 여기는 -->
+                    <div class="main-content2-inner">
+                        <h1><span>포지션 스크랩 리스트 (1)</span><span>총 <!-- -->1<!-- -->개</span><span><input readonly=""
+                                    class="top-checkbox4" type="checkbox">마감 포지션 제외</span></h1>
+                        <div>
+                            <div class="main-content5-bottom-box">
+                                <a target="_blank"
+                                    title="AI Research Scientist (Computer Vision and Bioinformatics)_병역특례/전문연구요원 우대 (2~4년)"
+                                    href="/position/42110">
+                                    <div class="img-filter">
+                                    </div>
+                                    <div class="img-box">
+                                        <img alt="아론티어" class="img"
+                                            src="https://cdn.jumpit.co.kr/lg/images/jnyoon_106/20253515103518656_567_378.webp">
+                                        <div class="d-date">
+                                            <span class="d-date-text">D-11</span>
+                                        </div>
+                                        <div class="counts">
+                                            <div class="position-view-count">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16">
+                                                    <g fill="none" fill-rule="evenodd">
+                                                        <path d="M0 0h16v16H0z">
+                                                        </path>
+                                                        <g stroke="#FFF" stroke-linecap="round">
+                                                            <path
+                                                                d="M8 10c.86 0 1.556-.672 1.556-1.5S8.859 7 8 7c-.86 0-1.556.672-1.556 1.5S7.141 10 8 10z">
+                                                            </path>
+                                                            <path
+                                                                d="M15 8.5c-1.469 2.243-4.108 4.5-7 4.5-2.892 0-5.531-2.257-7-4.5C2.788 6.369 4.882 4 8 4s5.212 2.369 7 4.5z">
+                                                            </path>
+                                                        </g>
+                                                    </g>
+                                                </svg><span></span>
+                                            </div><button aria-pressed="true" type="button" class="scrap-button"><svg
+                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    fill="none" viewBox="0 0 24 24">
+                                                    <path fill="#00DD6D" fill-rule="evenodd"
+                                                        d="M6.403 20.825a1 1 0 0 1-1.653-.757V5a2 2 0 0 1 2-2h10.5a2 2 0 0 1 2 2v15.068a1 1 0 0 1-1.653.757L12 16l-5.597 4.825Z"
+                                                        clip-rule="evenodd">
+                                                    </path>
+                                                </svg></button>
+                                        </div>
+                                    </div>
+                                    <div class="content-text">
+                                        <div class="content-text1">
+                                            <span>아론티어</span>
+                                        </div>
+                                        <h2 class="position_card_info_title">
+                                            AI Research
+                                            Scientist
+                                            (Computer Vision
+                                            and
+                                            Bioinformatics)_병역특례/전문연구요원
+                                            우대 (2~4년)</h2>
+                                        <ul class="content-text2">
+                                            <li>AI/인공지능</li>
+                                            <li>· PyTorch
+                                            </li>
+                                            <li>· Linux</li>
+                                            <li>· GitHub
+                                            </li>
+                                            <li>· Python
+                                            </li>
+                                        </ul>
+                                        <ul class="content-text3">
+                                            <li>경력 0년</li>
+                                        </ul>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--   스크랩 리스트가 있을 때 출력되는 영역 -->
+
+
+                    <!-- 여기는  -->
                     <div class="main-content2-inner">
                         <h1>
                             <span>포지션
@@ -648,6 +724,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- 스크랩 리스트가 0개일때 출력되는 영역 내부에 있는 데이터는 fetch로 쏴주는 영역 -->
                 </div>
             </div>
         </div>
