--- a/templates/login/loginPage.html
+++ b/templates/login/loginPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인 - 사람인</title>
-    <link rel="stylesheet" href="../static/loginPageCSS.css" />
+    <link rel="stylesheet" href="../../static/css/login/loginPageCSS.css" />
     <link rel="shortcut icon" href="" type="image/x-icon" />
   </head>
   <body>
@@ -355,7 +355,7 @@
                   </div>
                 </div>
               </div>
-              <div class="normal_user">
+              <div class="normal_user" id="normal_page">
                 <div class="login_page_wrap">
                   <form id="login_frm" class="login_frm">
                     <div class="login_input_wrap">
@@ -369,7 +369,7 @@
                           <button
                             type="button"
                             class="btn_tab t_com"
-                            id="companyMenuButton"
+                            id="company_B"
                           >
                             기업회원
                           </button>
@@ -407,7 +407,7 @@
                                 <input
                                   type="checkbox"
                                   name="id_save"
-                                  id="normallogin"
+                                  id="autologin"
                                 />
                                 <label class="Lbl loging" for="autologin"
                                   >로그인 유지</label
@@ -421,7 +421,7 @@
                                   name="id_save"
                                   id="save"
                                 />
-                                <label class="Lbl" for="id_save"
+                                <label class="Lbl" for="save"
                                   >아이디 저장</label
                                 >
                               </span>
@@ -478,7 +478,7 @@
                           <button
                             type="button"
                             class="btn_tab t_per"
-                            id="normal_M"
+                            id="normal_B"
                           >
                             개인회원
                           </button>
@@ -521,19 +521,7 @@
                           </div>
                           <div class="setting">
                             <div class="InpBox" style="display: block">
-                              <span class="Chk">
-                                <input
-                                  type="checkbox"
-                                  name="id_save"
-                                  id="autologin"
-                                />
-                                <label
-                                  class="Lbl loging"
-                                  for="autologin"
-                                  style="display: none"
-                                  >로그인 유지</label
-                                >
-                              </span>
+                              <span class="Chk"> </span>
                             </div>
                             <div class="InpBox">
                               <span class="Chk">
@@ -558,7 +546,10 @@
                         <div class="signup-forgotten">
                           <a href="" class="sign_up">아이디 찾기</a>
                           <a href="" class="forgotten">비밀번호 찾기</a>
-                          <a href="" class="link_rater" style="display: none"
+                          <a
+                            href=""
+                            class="link_rater sprt_login"
+                            style="display: none"
                             >협업자 로그인</a
                           >
                         </div>
@@ -609,5 +600,5 @@
       </div>
     </footer>
   </body>
-  <script src="../static/loginPage.js"></script>
+  <script src="../../static/js/login/loginPage.js"></script>
 </html>
