--- a/templates/main/MainPage.html
+++ b/templates/main/MainPage.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>점핏 | 개발자 커리어 점프</title>
+        <title>템프 | 새로운 커리어 경험</title>
         <link rel="stylesheet" href="../../static/css/main/MainPage.css" />
         <link
             rel="shortcut icon"
